--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -21,5 +21,6 @@ executable frontend
   build-depends:       base >=4.9 && <4.12
                      , common
                      , reflex-dom
+                     , jsaddle-warp
   hs-source-dirs:      src
   default-language:    Haskell2010
