add auto-reloading page for develop on mac

--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -22,5 +22,7 @@ executable frontend
                      , common
                      , reflex-dom
                      , jsaddle-warp
+                     , process
+                     , exceptions
   hs-source-dirs:      src
   default-language:    Haskell2010
