--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -24,5 +24,7 @@ executable frontend
                      , jsaddle-warp
                      , process
                      , exceptions
+                     , text
+                     , containers >= 0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
