--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -26,5 +26,7 @@ executable frontend
                      , exceptions
                      , text
                      , containers >= 0.5
+                     , mtl
+                     , time
   hs-source-dirs:      src
   default-language:    Haskell2010
