--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -19,6 +19,7 @@ executable frontend
   ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
   -- other-extensions:    
   build-depends:       base >=4.9 && <4.12
+                     , aeson
                      , common
                      , reflex-dom
                      , jsaddle-warp
